<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Greedy Mouse</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startString">Start</string>
    <string name="rankingString">Ranking</string>
    <string name="creditString">Credit</string>
    <string name="loadingString">Loading</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="getReadyString">Get ready!</string>

</resources>
