<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/startTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/rankingButton"
                style="android:buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:minHeight="48dip"
                android:minWidth="160dip"
                android:onClick="ranking"
                android:text="@string/rankingString"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/creditButton"
                style="android:buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/rankingButton"
                android:layout_alignStart="@+id/rankingButton"
                android:layout_below="@+id/rankingButton"
                android:minHeight="48dip"
                android:minWidth="160dip"
                android:onClick="credit"
                android:text="@string/creditString"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/startButton"
                style="android:buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/rankingButton"
                android:layout_alignEnd="@+id/rankingButton"
                android:layout_alignStart="@+id/rankingButton"
                android:minHeight="48dip"
                android:minWidth="160dip"
                android:onClick="start"
                android:text="@string/startString"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/loadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/loadingString"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/iconLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/iconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/king_rat"
            android:visibility="gone" />

    </RelativeLayout>

</FrameLayout>
